--- a/app/locales/ka.json
+++ b/app/locales/ka.json
@@ -27,56 +27,64 @@
       "innovations": {
         "title": "ინოვაციები და მომავლის ხედვა",
         "bullets": [
-          "ხედავ ინოვაციურ გადაწყვეტებს",
-          "ქმნი მომავლის ტექნოლოგიებს",
-          "განვითარებ ინოვაციურ პროცესებს"
+          "აქ ჩაუღრმავდები MEAMA-ს ციფრულ სტრატეგიას.",
+          "გაეცნობი ახალი ტექნოლოგიების კვლევასა და დანერგვას.",
+          "გაიგებ, როგორ იქმნება და ოპტიმიზდება MEAMA-ს ეკოსისტემის ტექნოლოგიური გადაწყვეტილებები.",
+          "შენ გახდები ინოვაციების ნაწილი, რომელიც MEAMA-ს მომავალს აყალიბებს."
         ],
-        "description": "გეხმარებით ინოვაციური უნარების სრულყოფაში"
+        "description": ""
       },
       "analytical": {
         "title": "ანალიტიკური და სტრატეგიული აზროვნება",
         "bullets": [
-          "ხედავ კანონზომიერებებს",
-          "აგვარებ კომპლექსურ პრობლემებს",
-          "ქმნი ბიზნეს სტატეგიებს"
+          "ამ მიმართულებით შეისწავლი, თუ როგორ ხდება MEAMA-ში მონაცემთა ანალიზი.",
+          "ისწავლი ბაზრის ტენდენციების იდენტიფიცირებას.",
+          "შეისწავლი ამ ინფორმაციის საფუძველზე გრძელვადიანი ბიზნეს სტრატეგიების შემუშავებას.",
+          "გასწავლით, როგორ გადააქციო მონაცემები გადაწყვეტილებებად.",
+          "იმუშავებ რეალურ ქეისებზე."
         ],
-        "description": "გეხმარებით ანალიტიკური უნარების სრულყოფაში"
+        "description": ""
       },
       "financial": {
         "title": "ფინანსური რესურსების მართვა",
         "bullets": [
-          "ანალიზს ატარებ ფინანსურ მონაცემებზე",
-          "ქმნი ეფექტურ ბიუჯეტებს",
-          "ოპტიმიზირებ ფინანსურ პროცესებს"
+          "ამ ბლოკში შეისწავლი MEAMA-ს ფინანსური ოპერაციების მართვას.",
+          "გაეცნობი ბიუჯეტირების პროცესებს.",
+          "ისწავლი ფინანსური ანგარიშგებების შედგენასა და ანალიზს.",
+          "შეისწავლი შემოსავლების პროგნოზირებას.",
+          "მოგცემს ინსტრუმენტებს, რომ გახდე კომპანიის ფინანსური წარმატების განუყოფელი ნაწილი."
         ],
-        "description": "გეხმარებით ფინანსური მართვის უნარების სრულყოფაში"
+        "description": ""
       },
       "communication": {
         "title": "კომუნიკაცია და მენჯმენტი",
         "bullets": [
-          "აგვარებ კომუნიკაციის გამოწვევებს",
-          "ქმნი ეფექტურ გუნდებს",
-          "განვითარებ ლიდერულ უნარებს"
+          "ისწავლი ლიდერობის პრინციპებსა და გუნდური მუშაობის ეფექტურ მეთოდებს.",
+          "ისწავლი, თუ როგორ ააშენო ძლიერი შიდა და გარე კომუნიკაცია.",
+          "შეისწავლი, როგორ მოახდინო პროექტების მართვა.",
+          "მიიღებ გამოცდილებას რეალური მენეჯერული გამოწვევების გადაწყვეტაში."
         ],
-        "description": "გეხმარებით კომუნიკაციისა და მენეჯმენტის უნარების სრულყოფაში"
+        "description": ""
       },
       "rd": {
         "title": "R&D (კვლევა და განვითარება)",
         "bullets": [
-          "ატარებ სისტემატურ კვლევებს",
-          "ქმნი განვითარების სტრატეგიებს",
-          "განვითარებ ინოვაციურ პროდუქტებს"
+          "ამ მიმართულებით გაეცნობი MEAMA-ს R&D პროცესებს.",
+          "ეს მოიცავს ახალი ყავის, ჩაის და ფუნქციური სასმელების კაფსულების შექმნას.",
+          "ასევე ტექნოლოგიური გადაწყვეტილებების კვლევასა და განვითარებას, რომლებიც ჩვენი ეკოსისტემის ოპტიმიზაციას ემსახურება.",
+          "ისწავლი მათ ტესტირებასა და პროდუქტად ან სერვისად ქცევას.",
+          "შეიტყობ, როგორ ხდება იდეების გენერირება."
         ],
-        "description": "გეხმარებით კვლევისა და განვითარების უნარების სრულყოფაში"
+        "description": ""
       },
       "logistics": {
         "title": "გლობალური ლოჯისტიკა",
         "bullets": [
-          "ოპტიმიზირებ ლოჯისტიკურ პროცესებს",
-          "მართავ გლობალურ ჯაჭვებს",
-          "ქმნი ეფექტურ სისტემებს"
+          "შეისწავლით საერთაშორისო ტრანსპორტირების, სასაწყობო მეურნეობისა და მარაგების მართვის თანამედროვე მეთოდებს.",
+          "გაიგებთ, თუ როგორ ხდება ლოჯისტიკური პროცესების ოპტიმიზაცია ხარჯების შესამცირებლად და ეფექტურობის გასაზრდელად.",
+          "იმუშავებთ რეალურ ლოჯისტიკურ გამოწვევებზე და შეიმუშავებთ გადაწყვეტილებებს, რომლებიც ხელს შეუწყობს MEAMA-ს პროდუქციის ეფექტურ დისტრიბუციას მსოფლიო მასშტაბით."
         ],
-        "description": "გეხმარებით ლოჯისტიკური უნარების სრულყოფაში"
+        "description": ""
       }
     }
   },
