--- a/app/locales/ru.json
+++ b/app/locales/ru.json
@@ -27,56 +27,64 @@
       "innovations": {
         "title": "Инновации и взгляд в будущее",
         "bullets": [
-          "Ты видишь инновационные решения",
-          "Ты создаёшь технологии будущего",
-          "Ты развиваешь инновационные процессы"
+          "Здесь ты глубоко погрузишься в цифровую стратегию MEAMA.",
+          "Ты познакомишься с исследованиями и внедрением новых технологий.",
+          "Ты узнаешь, как создаются и оптимизируются технологические решения экосистемы MEAMA.",
+          "Ты станешь частью инноваций, которые формируют будущее MEAMA."
         ],
-        "description": "Помогаем совершенствовать инновационные навыки"
+        "description": ""
       },
       "analytical": {
         "title": "Аналитическое и стратегическое мышление",
         "bullets": [
-          "Ты видишь закономерности",
-          "Ты решаешь сложные задачи",
-          "Ты создаёшь бизнес-стратегии"
+          "В этом направлении ты изучишь, как проводится анализ данных в MEAMA.",
+          "Ты научишься выявлять рыночные тенденции.",
+          "Ты изучишь разработку долгосрочных бизнес-стратегий на основе этой информации.",
+          "Тебя научат, как превращать данные в решения.",
+          "Ты будешь работать над реальными кейсами."
         ],
-        "description": "Помогаем совершенствовать аналитические навыки"
+        "description": ""
       },
       "financial": {
         "title": "Управление финансовыми ресурсами",
         "bullets": [
-          "Ты анализируешь финансовые данные",
-          "Ты создаёшь эффективные бюджеты",
-          "Ты оптимизируешь финансовые процессы"
+          "В этом блоке ты изучишь управление финансовыми операциями MEAMA.",
+          "Ты познакомишься с процессами бюджетирования.",
+          "Ты научишься составлять и анализировать финансовую отчётность.",
+          "Ты изучишь прогнозирование доходов.",
+          "Это даст тебе инструменты, чтобы стать неотъемлемой частью финансового успеха компании."
         ],
-        "description": "Помогаем совершенствовать навыки финуправления"
+        "description": ""
       },
       "communication": {
         "title": "Коммуникация и менеджмент",
         "bullets": [
-          "Ты решаешь коммуникационные вызовы",
-          "Ты создаёшь эффективные команды",
-          "Ты развиваешь лидерские навыки"
+          "Ты изучишь принципы лидерства и эффективные методы командной работы.",
+          "Ты научишься строить сильную внутреннюю и внешнюю коммуникацию.",
+          "Ты изучишь, как управлять проектами.",
+          "Ты получишь опыт в решении реальных управленческих задач."
         ],
-        "description": "Помогаем совершенствовать навыки коммуникации и менеджмента"
+        "description": ""
       },
       "rd": {
         "title": "R&D (исследования и разработки)",
         "bullets": [
-          "Ты проводишь системные исследования",
-          "Ты создаёшь стратегии развития",
-          "Ты развиваешь инновационные продукты"
+          "В этом направлении ты познакомишься с процессами R&D в MEAMA.",
+          "Это включает создание новых капсул для кофе, чая и функциональных напитков.",
+          "А также исследования и разработку технологических решений, которые служат оптимизации нашей экосистемы.",
+          "Ты научишься их тестированию и превращению в продукты или услуги.",
+          "Ты узнаешь, как генерируются идеи."
         ],
-        "description": "Помогаем совершенствовать навыки R&D"
+        "description": ""
       },
       "logistics": {
         "title": "Глобальная логистика",
         "bullets": [
-          "Ты оптимизируешь логистические процессы",
-          "Ты управляешь глобальными цепочками",
-          "Ты создаёшь эффективные системы"
+          "Ты изучишь современные методы международных перевозок, складского хозяйства и управления запасами.",
+          "Ты поймёшь, как оптимизируются логистические процессы для снижения затрат и повышения эффективности.",
+          "Ты будешь работать над реальными логистическими задачами и разрабатывать решения, которые будут способствовать эффективному распределению продукции MEAMA по всему миру."
         ],
-        "description": "Помогаем совершенствовать логистические навыки"
+        "description": ""
       }
     }
   },
