--- a/app/locales/ru.json
+++ b/app/locales/ru.json
@@ -95,6 +95,10 @@
   },
   "loopingText": {
     "text": "Открой глаза"
+  },
+  "graduates": {
+    "title": "Выпускники",
+    "empty": "Пока нет выпускников"
   }
 }
 
