--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -95,6 +95,10 @@
   },
   "loopingText": {
     "text": "Open your eyes"
+  },
+  "graduates": {
+  "title": "Graduates",
+  "empty": "No graduates found yet"
   }
 }
 
