feat: Implement graduates page with CSV data fetching and display
- Added a new Graduates page that fetches and displays graduate information from a CSV file.
- Introduced transliteration for Georgian names to Latin script.
- Created a utility function to convert Google Drive image URLs for direct access.
- Enhanced the NextHeader component to include a mobile menu and improved language selector functionality.
- Updated localization files to include new strings for graduates.
- Added styles for the graduates page and its components.
- Implemented responsive design for mobile and desktop views.
- Added Content Security Policy enhancements for image sources.

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -2,6 +2,7 @@
   "header": {
     "navDirections": "Directions",
     "navContact": "Contact",
+    "navGraduates": "Graduates",
     "languageFullGeorgian": "Georgian",
     "languageShortGeorgian": "Geo",
     "languageFullEnglish": "English",
@@ -95,6 +96,9 @@
   },
   "loopingText": {
     "text": "Open your eyes"
+  },
+  "graduates": {
+  "title": "Graduates",
+  "empty": "No graduates found yet"
   }
 }
-
