--- a/app/locales/ka.json
+++ b/app/locales/ka.json
@@ -95,6 +95,9 @@
   },
   "loopingText": {
     "text": "გაახილე თვალები"
+  },
+  "graduates": {
+    "title": "კურსდამთავრებულები",
+    "empty": "ამ დროისთვის კურსდამთავრებულები არ მოიძებნა"
   }
 }
-
